Ensure caret visible when text added horizontally

--- a/code-input.css
+++ b/code-input.css
@@ -41,14 +41,16 @@ code-input textarea, code-input:not(.code-input_pre-element-styled) pre code, co
   margin: 0px!important;
   padding: var(--padding, 16px)!important;
   border: 0;
-  min-width: calc(100% - var(--padding, 16px) * 2);
-  min-height: calc(100% - var(--padding, 16px) * 2);
+  min-width: 100%;
+  min-height: 100%;
+  box-sizing: border-box; /* Don't need to worry about padding to calculate width! */
   overflow: hidden;
   resize: none;
   grid-row: 1;
   grid-column: 1;
   display: block;
 }
+
 code-input:not(.code-input_pre-element-styled) pre code, code-input.code-input_pre-element-styled pre {
   height: max-content;
   width: max-content;
